--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ηιʜιλιѕτιᴄ ηєυяαʟ ηєτωøяκ</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="image.jpeg" type="image/png">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div class="profile-info">
-                        <p>Open for collaboration</p>
+                        <p>Solo-levelling. Open for collaboration</p>
                     </div>
                 </div>
 
@@ -38,7 +39,7 @@
                         <li>Exploring mechanistic interpretability</li>
                         <li>Currently participating in ARC Challenge 2025</li>
                         <li>Obsessed with Bach's music</li>
-                        <li>Favourite reads: Godel, Escher, Bach; A Man's Search for Meaning; Division by Zero; Exhalation</li>
+                        <li>Favourite reads: Godel, Escher, Bach; A Man's Search for Meaning; Understand; Exhalation</li>
                         <li>Favourite watch: Pantheon, Westworld (S1), Burning, Perfect Days, Disciple, I Lost my Body, Hot Fuzz...more on my&nbsp;<a href="https://letterboxd.com/nihilisticnn404/films/rated/5/">Letterboxd</a></li>
                         
 
