--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
                             </svg>
-                            <a href="https://github.com/nihilisticneuralnet">Github</a>
+                            <a href="https://github.com/nihilisticneuralnet" target="_blank" rel="noopener noreferrer">Github</a>
                         </div>
 
 
@@ -134,7 +134,7 @@
                                     d="M 10.351562 4 C 10.117563 4 10 4.1165625 10 4.3515625 L 10 27.644531 C 10 27.878531 10.116563 27.996094 10.351562 27.996094 L 12.648438 27.996094 C 12.882437 27.996094 13.001953 27.879531 13.001953 27.644531 L 13.001953 22.808594 L 14.810547 21.085938 L 20.048828 27.75 C 20.190828 27.915 20.354922 28 20.544922 28 L 23.716797 28 C 23.882797 28 23.977 27.952422 24 27.857422 L 23.933594 27.498047 L 17.023438 18.910156 L 23.650391 12.498047 C 23.773391 12.370047 23.730438 12 23.398438 12 L 20.117188 12 C 19.951187 12 19.785141 12.085953 19.619141 12.251953 L 13 18.974609 L 13 4.3515625 C 13 4.1165625 12.883437 4 12.648438 4 L 10.351562 4 z">
                                 </path>
                             </svg>
-                            <a href="https://www.kaggle.com/nihilisticneuralnet">Kaggle</a>
+                            <a href="https://www.kaggle.com/nihilisticneuralnet" target="_blank" rel="noopener noreferrer">Kaggle</a>
                         </div>
 
 
@@ -147,7 +147,7 @@
                                     d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z">
                                 </path>
                             </svg>
-                            <a href="https://x.com/nihilisticnn404">Twitter</a>
+                            <a href="https://x.com/nihilisticnn404" target="_blank" rel="noopener noreferrer">Twitter</a>
                         </div>
 
                         <!-- LinkedIn -->
@@ -160,7 +160,7 @@
                                 <rect x="2" y="9" width="4" height="12"></rect>
                                 <circle cx="4" cy="4" r="2"></circle>
                             </svg>
-                            <a href="https://www.linkedin.com/in/nihilisticneuralnet/">Linkedin</a>
+                            <a href="https://www.linkedin.com/in/nihilisticneuralnet/" target="_blank" rel="noopener noreferrer">Linkedin</a>
                         </div>
 
                         <!-- Letterboxd -->
@@ -171,7 +171,7 @@
                                     d="M406.657,149.964H122.883l271.078-78.849c5.842-1.699,9.224-7.841,7.517-13.686L387.092,7.957 c-1.694-5.844-7.834-9.215-13.68-7.518L42.666,96.647c-5.844,1.699-9.217,7.839-7.52,13.685l14.39,49.47 c0.353,1.212,0.936,2.293,1.632,3.267v49.456c0,6.086,4.951,11.04,11.042,11.04h7.356v219.999c0,4.879,3.962,8.829,8.832,8.829 h312.062c4.87,0,8.83-3.955,8.83-8.829V223.565h7.354c6.085,0,11.043-4.954,11.043-11.04v-51.521 C417.699,154.916,412.741,149.964,406.657,149.964z M259.985,154.38h35.337l-35.224,64.769h-35.33L259.985,154.38z M164.308,154.38h35.333l-35.226,64.769h-35.331L164.308,154.38z M321.548,20.125l51.907,52.35l-33.913,9.87l-51.92-52.354 L321.548,20.125z M233.915,45.613l51.915,52.353l-33.923,9.866l-51.924-52.351L233.915,45.613z M47.035,135.395l-7.647-26.296 c-1.021-3.508,1.008-7.19,4.51-8.208l9.805-2.848l51.489,51.927H62.21c-0.225,0-0.439,0.057-0.655,0.068L47.035,135.395z M91.889,154.38l-20.194,5.877l-1.665-1.674l2.282-4.203H91.889z M72.419,219.149H62.214c-3.653,0-6.629-2.97-6.629-6.624v-27.39 l10.083-18.528l41.961-12.21L72.419,219.149z M142.034,72.341l51.916,52.351l-33.923,9.869L108.11,82.207L142.034,72.341z M356.75,347.402H110.937v-14.244H356.75V347.402z M356.75,287.045H110.937v-14.237H356.75V287.045z M351.36,219.149h-35.331 l35.216-64.769h35.339L351.36,219.149z">
                                 </path>
                             </svg>
-                            <a href="https://letterboxd.com/nihilisticnn404/">Letterboxd</a>
+                            <a href="https://letterboxd.com/nihilisticnn404/" target="_blank" rel="noopener noreferrer">Letterboxd</a>
                         </div>
 
 
@@ -183,7 +183,7 @@
                                 <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
                                 <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
                             </svg>
-                            <a href="https://goodreads.com/nihilisticneuralnet">Goodreads</a>
+                            <a href="https://goodreads.com/nihilisticneuralnet" target="_blank" rel="noopener noreferrer">Goodreads</a>
                         </div>
                     </div>
                 </div>
