--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
                 <div class="section">
                     <h2 class="section-title">Projects</h2>
                     <ul>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/HinDiffusionLM">HinDiffusionLM</a></strong>:
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/HinDiffusionLM" target="_blank" rel="noopener noreferrer">HinDiffusionLM</a></strong>:
                             Diffusion Language Model for Hindi Language</li>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/Manya">Manya</a></strong>: Multi-Agent AI Manim
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/Manya" target="_blank" rel="noopener noreferrer">Manya</a></strong>: Multi-Agent AI Manim
                             Generation System</li>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/WikIt">WikIt</a></strong>: Multi-Modal Cached RAG
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/WikIt" target="_blank" rel="noopener noreferrer">WikIt</a></strong>: Multi-Modal Cached RAG
                             System</li>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/GANDHI">GANDHI</a></strong>: Generative Adversarial
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/GANDHI" target="_blank" rel="noopener noreferrer">GANDHI</a></strong>: Generative Adversarial
                             Network for Decoding High-level Images from EEG signals</li>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/DaVinki">DaVinki</a></strong>: Photomosaic Generator
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/DaVinki" target="_blank" rel="noopener noreferrer">DaVinki</a></strong>: Photomosaic Generator
                             using CIFAR-10 Dataset</li>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/BabyDriver">BabyDriver</a></strong>: Real Time
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/BabyDriver" target="_blank" rel="noopener noreferrer">BabyDriver</a></strong>: Real Time
                             Vehicle Detection & Speed Estimation</li>
-                        <li><strong><a href="https://github.com/nihilisticneuralnet/CamHead">CamHead</a></strong>: Head Tracking for
+                        <li><strong><a href="https://github.com/nihilisticneuralnet/CamHead" target="_blank" rel="noopener noreferrer">CamHead</a></strong>: Head Tracking for
                             Desktop VR Displays</li>
                     </ul>
                 </div>
@@ -78,33 +78,33 @@
                 <div class="section">
                     <h2 class="section-title">Achievements</h2>
                     <ul>
-                        <li><strong><a href="https://www.kaggle.com/nihilisticneuralnet">Kaggle Competitions Expert</a></strong> - Ranked 0.2% in global Kaggle Competitions</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/playground-series-s3e18/overview">Kaggle
+                        <li><strong><a href="https://www.kaggle.com/nihilisticneuralnet" target="_blank" rel="noopener noreferrer">Kaggle Competitions Expert</a></strong> - Ranked 0.2% in global Kaggle Competitions</li>
+                        <li><strong><a href="https://www.kaggle.com/competitions/playground-series-s3e18/overview" target="_blank" rel="noopener noreferrer">Kaggle
                                 Playground Series Competition – Season 13 Episode 18</a></strong> - Winner (1<sup>st</sup>&nbsp;place)
                             out of 1065 participants</li>
-                        <li><strong><a href="https://devfolio.co/google-genaiexchange">Google – GenAI Exchange Hackathon for
+                        <li><strong><a href="https://devfolio.co/google-genaiexchange" target="_blank" rel="noopener noreferrer">Google – GenAI Exchange Hackathon for
                                 Sarvam AI Track</a></strong> - Finalist (Top 5)</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/konwinski-prize">Konwinski Prize</a></strong> - Silver
+                        <li><strong><a href="https://www.kaggle.com/competitions/konwinski-prize" target="_blank" rel="noopener noreferrer">Konwinski Prize</a></strong> - Silver
                             Medalist (Ranked 37<sup>th</sup>/ 617)</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/leash-BELKA">NeurIPS 2024 Competition: Predict
+                        <li><strong><a href="https://www.kaggle.com/competitions/leash-BELKA" target="_blank" rel="noopener noreferrer">NeurIPS 2024 Competition: Predict
                                 New Medicines with BELKA</a></strong> - Silver Medalist (Ranked 73<sup>th</sup>/ 1946)</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/child-mind-institute-problematic-internet-use">Child
+                        <li><strong><a href="https://www.kaggle.com/competitions/child-mind-institute-problematic-internet-use" target="_blank" rel="noopener noreferrer">Child
                                 Mind Institute Competition: Problematic Internet Use Competition</a></strong> - Silver Medalist
                             (Ranked 74<sup>th</sup>/ 3628)</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/um-game-playing-strength-of-mcts-variants">Maastricht
+                        <li><strong><a href="https://www.kaggle.com/competitions/um-game-playing-strength-of-mcts-variants" target="_blank" rel="noopener noreferrer">Maastricht
                                 University Competition: Game-Playing Strength of MCTS Variants Competition</a></strong> - Bronze
                             Medalist</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/arc-prize-2024">ARC Prize Competition 2024</a></strong>
+                        <li><strong><a href="https://www.kaggle.com/competitions/arc-prize-2024" target="_blank" rel="noopener noreferrer">ARC Prize Competition 2024</a></strong>
                             - Bronze Medalist</li>
-                        <li><strong><a href="https://unstop.com/hackathons/amazon-ml-challenge-amazon-1100713">Amazon – ML
+                        <li><strong><a href="https://unstop.com/hackathons/amazon-ml-challenge-amazon-1100713" target="_blank" rel="noopener noreferrer">Amazon – ML
                                 Challenge</a></strong> - Secured 263<sup>th</sup>&nbsp;place out of 25000 participants (Top 2%)
                         </li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/rohlik-orders-forecasting-challenge">Rohlik
+                        <li><strong><a href="https://www.kaggle.com/competitions/rohlik-orders-forecasting-challenge" target="_blank" rel="noopener noreferrer">Rohlik
                                 Orders Forecasting Challenge</a></strong> - Ranked 42<sup>th</sup>&nbsp;out of 1017 participants
                             (Top 4%)</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/brist1d">BrisT1D Blood Glucose Prediction
+                        <li><strong><a href="https://www.kaggle.com/competitions/brist1d" target="_blank" rel="noopener noreferrer">BrisT1D Blood Glucose Prediction
                                 Competition</a></strong> - Top 100</li>
-                        <li><strong><a href="https://www.kaggle.com/competitions/optiver-trading-at-the-close">Optiver – Trading
+                        <li><strong><a href="https://www.kaggle.com/competitions/optiver-trading-at-the-close" target="_blank" rel="noopener noreferrer">Optiver – Trading
                                 at the Close</a></strong> - Top 10%</li>
                     </ul>
                 </div>
