--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div class="profile-info">
-                        <p>21M, Solo-levelling. Open for collaboration</p>
+                        <p>21M, CS@IIIT. Solo-levelling. Open for collaboration</p>
                     </div>
                 </div>
 
