--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="section">
-                    <h2 class="section-title">Current Focus</h2>
+                    <h2 class="section-title">Uninteresting Facts about me</h2>
                     <ul>
                         <li>Exploring mechanistic interpretability</li>
                         <li>Currently participating in ARC Challenge 2025</li>
