--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                             </div>
                         </li>
                         <li class="achievement-item">
-                            <img src="achievements/amazon.png" alt="Amazon" class="item-image">
+                            <img src="achievements/amazon2.jpeg" alt="Amazon" class="item-image">
                             <div class="item-text">
                                 <a href="https://unstop.com/hackathons/amazon-ml-challenge-amazon-1100713"
                                     target="_blank" rel="noopener noreferrer"><strong>Amazon – ML
