--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                     rel="noopener noreferrer"><strong>Konwinski Prize</strong></a> - Silver
                                 Medalist <strong>(Ranked 37<sup>th</sup>/ 617)</strong>
                                 <div class="competition-desc">
-                                    Solved SWE-bench based GitHub issues using DeepSeek (got lucky on the
+                                    Solved SWE-bench based GitHub issues benchmark using DeepSeek (got lucky on the
                                     leaderboard)
 
                                 </div>
