--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ηιʜιλιѕτιᴄ ηєυяαʟ ηєτωøяκ</title>
+    <title>I am an inexperienced idiot. Here's some embarrassing info about me</title>
     <link rel="stylesheet" href="styles.css">
 
     <link rel="icon" href="image.jpeg" type="image/png">
