--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
                             </div>
                         </li>
                         <li class="achievement-item">
+                            <img src="achievements/stanrna.png" alt="Silver rna Medal" class="item-image">
+                            <div class="item-text">
+                                <a href="https://www.kaggle.com/competitions/stanford-rna-3d-folding" target="_blank"
+                                    rel="noopener noreferrer"><strong>Stanford RNA 3D Folding</strong></a> - Silver
+                                Medalist <strong>(Ranked 65<sup>th</sup>/ 1516)</strong>
+                                <div class="competition-desc">
+                                    Utilized DRfold, an RNA 3D structure prediction method to predict RNA backbone coordinates, along with energy-based scoring for structure selection
+
+                                </div>
+                            </div>
+                        </li>
+                        <li class="achievement-item">
                             <img src="achievements/belka.png" alt="Silver Medal" class="item-image">
                             <div class="item-text">
                                 <a href="https://www.kaggle.com/competitions/leash-BELKA" target="_blank"
