--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <ul>
                         <li>Exploring mechanistic interpretability</li>
                         <li>Currently participating in ARC Challenge 2025</li>
-                        <li>Obsessed with Bach's music</li>
+                        <li>Obsessed with Bach's cantatas</li>
                         <li>Favourite reads: Godel, Escher, Bach; A Man's Search for Meaning; Understand; Exhalation
                         </li>
-                        <li>Favourite watch: Pantheon, Westworld (S1), Burning, Perfect Days, Disciple, I Lost my Body,
+                        <li>Cinephile -- favourite watch: Pantheon, Westworld (S1), Burning, Perfect Days, Disciple, I Lost my Body,
                             Hot Fuzz...more on my&nbsp;<a
                                 href="https://letterboxd.com/nihilisticnn404/films/rated/5/">Letterboxd</a></li>
                     </ul>
