Comment out Twitter/X connection in index.html
Commented out the Twitter/X connection section in the HTML.

--- a/index.html
+++ b/index.html
@@ -391,8 +391,7 @@
                                 rel="noopener noreferrer">Kaggle</a>
                         </div>
 
-                        <div class="connect-item">
-                            <!-- Twitter/X icon -->
+                        <!-- <div class="connect-item">
                             <svg class="connect-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path
@@ -401,7 +400,7 @@
                             </svg>
                             <a href="https://x.com/nihilisticnn404" target="_blank"
                                 rel="noopener noreferrer">Twitter</a>
-                        </div>
+                        </div> -->
 
                         <!-- LinkedIn -->
                         <div class="connect-item">
