--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                         <li><a href="https://github.com/nihilisticneuralnet/GANDHI" target="_blank"
                                 rel="noopener noreferrer"><strong>GANDHI</strong></a>: Generative Adversarial
                             Network for Decoding High-level Images from EEG signals</li>
-                        <li><a href="https://github.com/nihilisticneuralnet/DaVinki" target="_blank"
+                        <!-- <li><a href="https://github.com/nihilisticneuralnet/DaVinki" target="_blank"
                                 rel="noopener noreferrer"><strong>DaVinki</strong></a>: Photomosaic Generator
-                            using CIFAR-10 Dataset</li>
+                            using CIFAR-10 Dataset</li> -->
                         <li><a href="https://github.com/nihilisticneuralnet/BabyDriver" target="_blank"
                                 rel="noopener noreferrer"><strong>BabyDriver</strong></a>: Real Time
                             Vehicle Detection & Speed Estimation</li>
-                        <li><a href="https://github.com/nihilisticneuralnet/CamHead" target="_blank"
+                        <!-- <li><a href="https://github.com/nihilisticneuralnet/CamHead" target="_blank"
                                 rel="noopener noreferrer"><strong>CamHead</strong></a>: Head Tracking for
-                            Desktop VR Displays</li>
+                            Desktop VR Displays</li> -->
                     </ul>
                 </div>
 
