--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
                             <img src="achievements/comexpert.png" alt="Kaggle" class="item-image">
                             <div class="item-text">
                                 <a href="https://www.kaggle.com/nihilisticneuralnet" target="_blank"
-                                    rel="noopener noreferrer"><strong>Kaggle Competitions Expert</strong></a> - Ranked Top 500 in global
+                                    rel="noopener noreferrer"><strong>Kaggle Competitions Expert</strong></a> - Highest Ranked Top 300 in global
                                 Kaggle Competitions
                                 <div class="competition-desc">
-                                    Also Notebook Expert and Dataset Expert
+                                    Also Notebook Master (Highest Rank: 56) and Dataset Expert
                                 </div>
                             </div>
                         </li>
@@ -224,6 +224,20 @@
                                 </div>
                             </div>
                         </li>
+
+                        <li class="achievement-item">
+                            <img src="achievements/arc.png" alt="Bronze Medal" class="item-image">
+                            <div class="item-text">
+                                <a href="https://www.kaggle.com/competitions/arc-prize-2025" target="_blank"
+                                    rel="noopener noreferrer"><strong>ARC Prize Competition 2025</strong></a>
+                                - Silver Medalist <strong>(Ranked 62<sup>nd</sup>/ 1455)</strong>
+                                <div class="competition-desc">
+                                    Combined domain-specific language approaches with Qwen LLM for solving abstract reasoning tasks
+
+                                </div>
+                            </div>
+                        </li>
+                        
                         <li class="achievement-item">
                             <img src="achievements/stanrna.png" alt="Silver rna Medal" class="item-image">
                             <div class="item-text">
@@ -356,6 +370,16 @@
                                 </div>
                             </div>
                         </li>
+                        <!-- <li class="achievement-item">
+                            <img src="achievements/subway1.jpeg" alt="Subway" class="item-image">
+                            <div class="item-text">
+                                <a><strong>Suway</strong></a> - Top 10%
+                                <div class="competition-desc">
+                                    Built a trading algorithm booster model with feature engineering for stock price
+                                    movements prediction
+                                </div>
+                            </div>
+                        </li> -->
                     </ul>
                 </div>
 
