--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                                     <!-- <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line> -->
                                 </svg>
                             </a>
-                            <a href="https://x.com/nihilisticnnet" target="_blank" rel="noopener noreferrer" class="social-icon-link">
+                            <!-- <a href="https://x.com/nihilisticnnet" target="_blank" rel="noopener noreferrer" class="social-icon-link">
                                 <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
                                 </svg>
-                            </a>
+                            </a> -->
                         </div>
                         <p class="bio-text">22M, CS @IIIT'25. Solo-levelling. Open for collaboration</p>
                         <p class="bio-subtext">
