--- a/index.html
+++ b/index.html
@@ -366,16 +366,15 @@
                                 </div>
                             </div>
                         </li>
-                        <!-- <li class="achievement-item">
+                        <li class="achievement-item">
                             <img src="achievements/subway1.jpeg" alt="Subway" class="item-image">
                             <div class="item-text">
-                                <a><strong>Suway</strong></a> - Top 10%
+                                <a><strong>Subway Surfers</strong></a> - Champion
                                 <div class="competition-desc">
-                                    Built a trading algorithm booster model with feature engineering for stock price
-                                    movements prediction
+                                    Ranked 1 Champion in Week 47
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
 
