--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                         </div>
                         <p class="bio-text">22M, CS @IIIT'25. Solo-levelling. Open for collaboration</p>
                         <p class="bio-subtext">
-  — Currently participating in <a href="https://aimoprize.com/">AIMO3</a><br>
+  — Currently participating in <a href="https://aimoprize.com/">AIMO3</a> (currently ranked #1)<br>
   — Obsessed with <a href="https://www.youtube.com/playlist?list=PLecKPCyj4yRMxTujJw1hSwtFK0-KiUTx1">Bach’s cantatas</a> <br>
   — Favourite reads: <em>Gödel, Escher, Bach</em>; <em>A Man’s Search for Meaning</em>; <em>Understanding</em> <br>
-  — Cinephile — <em>Pantheon</em>, <em>Westworld</em> (S1), <em>Burning</em>,
+  — Cinephile: <em>Pantheon</em>, <em>Westworld</em> (S1), <em>Burning</em>,
   <em>Perfect Days</em>, more on my
   <a href="https://letterboxd.com/nihilisticnnet/films/rated/5/">Letterboxd</a>
 </p>
