--- a/index.html
+++ b/index.html
@@ -177,7 +177,17 @@
                                     rel="noopener noreferrer"><strong>Kaggle Competitions Expert</strong></a> - Highest Ranked Top 300 in global
                                 Kaggle Competitions
                                 <div class="competition-desc">
-                                    Also Notebook Master (Highest Rank: 56) and Dataset Expert
+                                    Also Notebook Master (Highest Rank: 30) and Dataset Expert
+                                </div>
+                            </div>
+                        </li>
+                        <li class="achievement-item">
+                            <img src="achievements/aimo.png" alt="AIMO" class="item-image">
+                            <div class="item-text">
+                                <a href="https://www.kaggle.com/competitions/ai-mathematical-olympiad-progress-prize-3/leaderboard" target="_blank"
+                                    rel="noopener noreferrer"><strong>AI Maths Olympiad 3</strong></a> - Currently Ranked #1
+                                <div class="competition-desc">
+                                     Longest Leader Prize Winner uses my open source notebook
                                 </div>
                             </div>
                         </li>
