--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   — Currently participating in <a href="https://aimoprize.com/">AIMO3</a> (currently ranked #1)<br>
   — Obsessed with <a href="https://www.youtube.com/playlist?list=PLecKPCyj4yRMxTujJw1hSwtFK0-KiUTx1">Bach’s cantatas</a> <br>
   — Favourite reads: <em>Gödel, Escher, Bach</em>; <em>A Man’s Search for Meaning</em>; <em>Understanding</em> <br>
-  — Cinephile: <em>Pantheon</em>, <em>Westworld</em> (S1), <em>Burning</em>,
+  — Cinephile: <em>Utopia (uk)</em>, <em>Westworld</em> (S1), <em>Burning</em>,
   <em>Perfect Days</em>, more on my
   <a href="https://letterboxd.com/nihilisticnnet/films/rated/5/">Letterboxd</a>
 </p>
